--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,7 +1,10 @@
 @charset "utf-8";
 
 body {
-    font: 13px/22px "Roboto", Helvetica, Arial, sans-serif;
+    font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', sans-serif;
+        font-feature-settings: 'cv02', 'cv03', 'cv04', 'cv11';
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
     color: #666;
     background: #fbfbfb;
     height: 100%;
